# Indiv_MnB

./: .gitignore  .gitmodules  CMakeLists.txt  CYK_pro.html  README.md  compile.sh  idk.txt  indiv  input-cyk1.json  input-cyk2.json  input-cyk3.json  input-cyk4.json  input-pda2cfg1.json  main.cpp  run.sh
examples/: CFG.json  PDA.json  TM.json  multi_TM.json  sam.json
libs/: PPP.hh
src/: CFG.cc  CFG.h  CYK.cc  CYK.h  PDA.cc  PDA.h  PDA2CFG.cc  PDA2CFG.h  State.cc  State.h  TM.cc  TM.h
